# poetry-bug-example

./: README.md
foo/: pyproject.toml
foo_app/: pyproject.toml
foo_base/: pyproject.toml
