[tool.poetry]
name = "foo"
version = "0.1.0"
description = "Foo"
authors = ["Foo"]
license = "MIT"

packages = [
    { include = "foo", from = "src" },
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.11"
foo_base = { version = "0.1.0", source = "pypi_foo" }
httpx = "^0.24.1"

[tool.poetry.group.pypi.dependencies]
twine = "^4.0.2"

[[tool.poetry.source]]
name = "pypi_foo"
url = "http://127.0.0.1:8080/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
